carousel slider with dot indicator

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   cloud_firestore: ^2.3.0
   flutter_screenutil: ^5.0.0+2
   fluttertoast: ^8.0.7
+  dots_indicator: ^2.0.0
+  carousel_slider: ^4.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
